@@ -2,7 +2,7 @@
 
 Gem::Specification.new do |s|
   s.name = "psych"
-  s.version = "2.0.12"
+  s.version = "2.0.13"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.require_paths = ["lib"]
