@@ -1,7 +1,7 @@
 require_relative 'helper'
 
 module Psych
-  class TestToYamlProperties < MiniTest::Unit::TestCase
+  class TestToYamlProperties < Psych::TestCase
     class Foo
       attr_accessor :a, :b, :c
       def initialize
